--- a/pagina-illustratore.html
+++ b/pagina-illustratore.html
@@ -38,6 +38,7 @@
                 <li><a href="#myModal-5"><img src="immagini/AP_Tim_Lahan_ONEMEDICAL_1_2x.png"></a></li>
                 <li><a href="#myModal-6"><img src="immagini/AP_Tim_Lahan_ONEMEDICAL_2_2x.png"></a></li>
                 <li><a href="#myModal-7"><img src="immagini/AP_Tim_Lahan_ONEMEDICAL_3_2x.png"></a></li>
+                <li><a href="#myModal-8"><img src="immagini/AP_Tim_Lahan_NYT_2x.png"></a></li>
             </ul>
         </div>
     </main>
@@ -81,6 +82,12 @@
         <div class="modal-content">
           <a href="#" id="closeModal" class="close">&times;</a>
           <img src="immagini/AP_Tim_Lahan_ONEMEDICAL_7_2x.png">
+        </div>
+    </div>
+    <div id="myModal-8" class="modal">
+        <div class="modal-content">
+          <a href="#" id="closeModal" class="close">&times;</a>
+          <img src="immagini/AP_Tim_Lahan_NYT_2x.png">
         </div>
     </div>
 </body>
