--- a/pagine-illustratore-2.html
+++ b/pagine-illustratore-2.html
@@ -39,6 +39,7 @@
                 <li><a href="#"><img class="modal-trigger" src="immagini/AP_Tim_Lahan_ONEMEDICAL_1_2x.png"></a></li>
                 <li><a href="#"><img class="modal-trigger" src="immagini/AP_Tim_Lahan_ONEMEDICAL_2_2x.png"></a></li>
                 <li><a href="#"><img class="modal-trigger" src="immagini/AP_Tim_Lahan_ONEMEDICAL_3_2x.png"></a></li>
+                <li><a href="#"><img class="modal-trigger" src="immagini/AP_Tim_Lahan_NYT_2x.png"></a></li>
 
             </ul>
         </div>
@@ -48,7 +49,7 @@
           <span id="closeModal" class="close">&times;</span>
           <img id="modalImage" src="" alt="Modal Image">
         </div>
-      </div>
+      </div>      
       <script src="js/modale.js"></script>
 </body>
 </html>
