--- a/pagina-illustratore.html
+++ b/pagina-illustratore.html
@@ -42,6 +42,9 @@
             </ul>
         </div>
     </main>
+    <footer>
+        <p>Agenzia Illustratori</p>
+    </footer>
     <div id="myModal-1" class="modal">
         <div class="modal-content">
           <a href="#" id="closeModal" class="close">&times;</a>
