--- a/pagina-illustratore-2.html
+++ b/pagina-illustratore-2.html
@@ -44,6 +44,9 @@
             </ul>
         </div>
     </main>
+    <footer>
+        <p>Agenzia Illustratori</p>
+    </footer>
     <div id="myModal" class="modal">
         <div class="modal-content">
           <span id="closeModal" class="close">&times;</span>
