--- a/pagina-illustratore.html
+++ b/pagina-illustratore.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Pagina illutratore  </title>
+    <title>Pagina illutratore</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <p>Agenzia</p>
+        <p>Agent Prof</p>
         <nav>
             <ul>
                 <li><a href="#">Agenzia</a></li>
