--- a/pagina-illustratore-2.html
+++ b/pagina-illustratore-2.html
@@ -49,7 +49,7 @@
         </div>
     </main>
     <footer>
-        <p>Agenzia Illustratori</p>
+        <p>Agent Prof</p>
     </footer>
     <div id="myModal" class="modal">
         <div class="modal-content">
