--- a/pagina-illustratore.html
+++ b/pagina-illustratore.html
@@ -47,7 +47,7 @@
         </div>
     </main>
     <footer>
-        <p>Agenzia Illustratori</p>
+        <p>Agent Prof</p>
     </footer>
     <div id="myModal-1" class="modal">
         <div class="modal-content">
